JDK11 support.